--- a/vagrant/telegraf.conf
+++ b/vagrant/telegraf.conf
@@ -90,7 +90,7 @@
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
   # urls = ["udp://127.0.0.1:8089"]
-  urls = ["http://influxdb:8086"]
+  urls = ["http://128.3.10.228:8086"]
 
   ## The target database for metrics; will be created as needed.
   database = "telegraf"
@@ -1640,7 +1640,7 @@
 [[inputs.exec]]
 #   ## Commands array
    commands = [
-     "/home/vagrant/scripts/main.sh"
+     "/global/home/users/ryanchan/savio-analytics-dashboard/main.sh"
    ]
 
 #
@@ -1657,21 +1657,9 @@
    data_format = "influx"
 
 [[inputs.exec]]
-    commands = ["/home/vagrant/scripts/slow.sh"]
+    commands = [""/global/home/users/ryanchan/savio-analytics-dashboard/slow.sh"]
     interval = "1m"
     data_format = "influx"
-
-[[inputs.exec]]
-    commands = ["/home/vagrant/scripts/time.sh"]
-    interval = "10s"
-    data_format = "influx"
-
-[[inputs.exec]]
-    commands = ["/home/vagrant/scripts/mock/mock.sh"]
-    interval = "10m"
-    timeout = "10m"
-    data_format = "influx"
-
 
 # # Read metrics from fail2ban.
 # [[inputs.fail2ban]]
