Fix TOML formatting

--- a/vagrant/telegraf.conf
+++ b/vagrant/telegraf.conf
@@ -1657,7 +1657,7 @@
    data_format = "influx"
 
 [[inputs.exec]]
-    commands = [""/global/home/users/ryanchan/savio-analytics-dashboard/slow.sh"]
+    commands = ["/global/home/users/ryanchan/savio-analytics-dashboard/slow.sh"]
     interval = "1m"
     data_format = "influx"
 
